--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -2,11 +2,18 @@ cmake_minimum_required(VERSION 3.7)
 
 add_definitions(-std=c++17)
 
-set(CXX_FLAGS "-Wall")
+set(CXX_FLAGS "-Wall `sdl2-config --libs --cflags` -lSDL2_ttf")
 set (CMAKE_CXX_FLAGS, "${CXX_FLAGS}")
 
 project(Capstone)
-include_directories(include)
+
+set(CMAKE_MODULE_PATH ${CMAKE_MODULE_PATH} "${CMAKE_SOURCE_DIR}/cmake/")
+
+find_package(SDL2 REQUIRED)
+include_directories(${SDL2_INCLUDE_DIRS} src)
+
 file(GLOB SOURCES "src/*.cpp")
 
 add_executable(Capstone ${SOURCES})
+string(STRIP ${SDL2_LIBRARIES} SDL2_LIBRARIES)
+target_link_libraries(Capstone ${SDL2_LIBRARIES} SDL2_ttf)
