--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -2,7 +2,7 @@ cmake_minimum_required(VERSION 3.7)
 
 add_definitions(-std=c++17)
 
-set(CXX_FLAGS "-g -Wall -Werror `sdl2-config --libs --cflags` -lSDL2_ttf -lSDL2_image")
+set(CXX_FLAGS "-g -Wall -Werror `sdl2-config --libs --cflags` -lSDL2_ttf -lSDL2_image -lSDL2_audio")
 set (CMAKE_CXX_FLAGS, "${CXX_FLAGS} -pthread")
 
 project(Capstone)
@@ -18,4 +18,5 @@ file(GLOB SOURCES "src/*.cpp" "src/animation/*.cpp")
 
 add_executable(Capstone ${SOURCES})
 string(STRIP ${SDL2_LIBRARIES} SDL2_LIBRARIES)
-target_link_libraries(Capstone ${SDL2_LIBRARIES} SDL2_ttf SDL2_image Threads::Threads)
+target_link_libraries(Capstone ${SDL2_LIBRARIES} SDL2_ttf SDL2_image SDL2_mixer Threads::Threads)
+
