Added collision manager + new obstacle course game.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -2,7 +2,7 @@ cmake_minimum_required(VERSION 3.7)
 
 add_definitions(-std=c++17)
 
-set(CXX_FLAGS "-g -O1 -Wall -Werror `sdl2-config --libs --cflags` -lSDL2_ttf -lSDL2_image -lSDL2_audio")
+set(CXX_FLAGS "-g -O1 -Wall -Werror -fno-omit-frame-pointer `sdl2-config --libs --cflags` -lSDL2_ttf -lSDL2_image -lSDL2_audio")
 set (CMAKE_CXX_FLAGS, "${CXX_FLAGS} -pthread")
 
 project(Capstone)
@@ -16,8 +16,9 @@ include_directories(${PROJECT_SOURCE_DIR}/animation)
 include_directories(${PROJECT_SOURCE_DIR}/audio)
 include_directories(${PROJECT_SOURCE_DIR}/rendering)
 include_directories(${PROJECT_SOURCE_DIR}/games/Pong)
+include_directories(${PROJECT_SOURCE_DIR}/games/ObstacleCourse)
 
-file(GLOB SOURCES "src/*.cpp" "src/animation/*.cpp" "src/games/Pong/*.cpp" "src/audio/*.cpp" "src/rendering/*.cpp")
+file(GLOB SOURCES "src/*.cpp" "src/audio/*.cpp" "src/rendering/*.cpp" "src/games/Pong/*.cpp" "src/games/ObstacleCourse/*.cpp")
 
 add_executable(Capstone ${SOURCES})
 string(STRIP ${SDL2_LIBRARIES} SDL2_LIBRARIES)
